--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontak - Sastra Fishing Club</title>
+    <link rel="icon" href="img/logo.jpeg" type="image/jpeg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&family=Plus+Jakarta+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -145,7 +146,7 @@
                     </div>
                     <h4 class="serif-font fw-bold">WhatsApp</h4>
                     <p class="text-muted small mb-4">Respon cepat untuk reservasi harian dan tanya jawab.</p>
-                    <a href="https://wa.me/6281234567890" target="_blank" class="btn-wa"><i class="bi bi-chat-dots me-2"></i> Chat WhatsApp</a>
+                    <a href="https://wa.me/6282246559115" target="_blank" class="btn-wa"><i class="bi bi-chat-dots me-2"></i> Chat WhatsApp</a>
                 </div>
             </div>
             <div class="col-md-4" data-aos="zoom-in" data-aos-delay="200">
