--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu - Sastra Fishing Club</title>
+    <link rel="icon" href="img/logo.jpeg" type="image/jpeg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&family=Plus+Jakarta+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -190,9 +191,9 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Beranda</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Beranda</a></li>
                     <li class="nav-item"><a class="nav-link" href="paket.html">Paket</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="menu.html">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="menu.html">Menu</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Kontak</a></li>
                 </ul>
             </div>
@@ -267,7 +268,7 @@
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="menu-card">
                     <div class="menu-img-wrapper">
-                        <img src="https://images.unsplash.com/photo-1565557623262-b51c2513a641?q=80&w=2071&auto=format&fit=crop" class="menu-img">
+                        <img src="img/kepiting.jpg" class="menu-img">
                     </div>
                     <div class="menu-content">
                         <h4 class="serif-font fw-bold">Kepiting Saus Padang</h4>
@@ -279,7 +280,7 @@
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="menu-card">
                     <div class="menu-img-wrapper">
-                        <img src="https://images.unsplash.com/photo-1625943553852-781c6dd161bd?q=80&w=1945&auto=format&fit=crop" class="menu-img">
+                        <img src="img/udang.jpg" class="menu-img">
                     </div>
                     <div class="menu-content">
                         <h4 class="serif-font fw-bold">Udang Jimbaran</h4>
@@ -291,7 +292,7 @@
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                 <div class="menu-card">
                     <div class="menu-img-wrapper">
-                        <img src="https://images.unsplash.com/photo-1604909052743-94e838986d24?q=80&w=2070&auto=format&fit=crop" class="menu-img">
+                        <img src="img/cumi.jpg" class="menu-img">
                     </div>
                     <div class="menu-content">
                         <h4 class="serif-font fw-bold">Cumi Calamari</h4>
@@ -312,7 +313,7 @@
             <div class="col-md-4" data-aos="fade-up">
                 <div class="menu-card">
                     <div class="menu-img-wrapper">
-                        <img src="https://images.unsplash.com/photo-1564834724105-918b73d1b9e0?q=80&w=2088&auto=format&fit=crop" class="menu-img">
+                        <img src="img/cah-kangkung.jpg" class="menu-img">
                     </div>
                     <div class="menu-content">
                         <h4 class="serif-font fw-bold">Cah Kangkung</h4>
@@ -324,7 +325,7 @@
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="menu-card">
                     <div class="menu-img-wrapper">
-                        <img src="https://images.unsplash.com/photo-1625758476270-34320958d5c3?q=80&w=1974&auto=format&fit=crop" class="menu-img">
+                        <img src="img/es-kelapa.jpg" class="menu-img">
                     </div>
                     <div class="menu-content">
                         <h4 class="serif-font fw-bold">Es Kelapa Batok</h4>
@@ -336,7 +337,7 @@
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="menu-card">
                     <div class="menu-img-wrapper">
-                        <img src="https://images.unsplash.com/photo-1601039641847-7857b994d704?q=80&w=2070&auto=format&fit=crop" class="menu-img">
+                        <img src="img/jus-alpukat.jpg" class="menu-img">
                     </div>
                     <div class="menu-content">
                         <h4 class="serif-font fw-bold">Jus Alpukat</h4>
