--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu - Sastra Fishing Club</title>
+    <link rel="icon" href="img/logo.jpeg" type="image/jpeg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&family=Plus+Jakarta+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -158,7 +159,7 @@
         <div class="row g-4">
             <div class="col-md-4" data-aos="fade-up">
                 <div class="menu-card">
-                    <div class="menu-img-wrapper"><img src="https://images.unsplash.com/photo-1534939561126-855b8675edd7?q=80&w=1974&auto=format&fit=crop" class="menu-img"></div>
+                    <div class="menu-img-wrapper"><img src="img/Gurame bakar.jpg" class="menu-img"></div>
                     <div class="menu-content">
                         <h4 class="serif-font fw-bold">Gurame Bakar Madu</h4>
                         <p class="text-muted small">Dibakar arang dengan olesan madu hutan.</p>
@@ -168,7 +169,7 @@
             </div>
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="menu-card">
-                    <div class="menu-img-wrapper"><img src="https://images.unsplash.com/photo-1621996346565-e3dbc646d9a9?q=80&w=2070&auto=format&fit=crop" class="menu-img"></div>
+                    <div class="menu-img-wrapper"><img src="img/nila.jpg" class="menu-img"></div>
                     <div class="menu-content">
                         <h4 class="serif-font fw-bold">Nila Goreng Terbang</h4>
                         <p class="text-muted small">Super renyah, digoreng deep-fried.</p>
@@ -178,7 +179,7 @@
             </div>
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="menu-card">
-                    <div class="menu-img-wrapper"><img src="https://images.unsplash.com/photo-1548943487-a2e4e43b485c?q=80&w=1974&auto=format&fit=crop" class="menu-img"></div>
+                    <div class="menu-img-wrapper"><img src="img/pindang.jpg" class="menu-img"></div>
                     <div class="menu-content">
                         <h4 class="serif-font fw-bold">Pindang Patin</h4>
                         <p class="text-muted small">Kuah kuning segar dengan nanas.</p>
@@ -196,7 +197,7 @@
         <div class="row g-4">
             <div class="col-md-4" data-aos="fade-up">
                 <div class="menu-card">
-                    <div class="menu-img-wrapper"><img src="https://images.unsplash.com/photo-1565557623262-b51c2513a641?q=80&w=2071&auto=format&fit=crop" class="menu-img"></div>
+                    <div class="menu-img-wrapper"><img src="img/kepiting.jpg" class="menu-img"></div>
                     <div class="menu-content">
                         <h4 class="serif-font fw-bold">Kepiting Saus Padang</h4>
                         <p class="text-muted small">Bumbu pedas manis nampol.</p>
@@ -206,7 +207,7 @@
             </div>
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="menu-card">
-                    <div class="menu-img-wrapper"><img src="https://images.unsplash.com/photo-1625943553852-781c6dd161bd?q=80&w=1945&auto=format&fit=crop" class="menu-img"></div>
+                    <div class="menu-img-wrapper"><img src="img/udang.jpg" class="menu-img"></div>
                     <div class="menu-content">
                         <h4 class="serif-font fw-bold">Udang Jimbaran</h4>
                         <p class="text-muted small">Udang windu bakar bumbu Bali.</p>
@@ -216,7 +217,7 @@
             </div>
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="menu-card">
-                    <div class="menu-img-wrapper"><img src="https://images.unsplash.com/photo-1604909052743-94e838986d24?q=80&w=2070&auto=format&fit=crop" class="menu-img"></div>
+                    <div class="menu-img-wrapper"><img src="img/cumi.jpg" class="menu-img"></div>
                     <div class="menu-content">
                         <h4 class="serif-font fw-bold">Cumi Calamari</h4>
                         <p class="text-muted small">Cumi goreng tepung + saus tartar.</p>
@@ -234,7 +235,7 @@
         <div class="row g-4">
             <div class="col-md-4" data-aos="fade-up">
                 <div class="menu-card">
-                    <div class="menu-img-wrapper"><img src="https://images.unsplash.com/photo-1564834724105-918b73d1b9e0?q=80&w=2088&auto=format&fit=crop" class="menu-img"></div>
+                    <div class="menu-img-wrapper"><img src="img/cah-kangkung.jpg" class="menu-img"></div>
                     <div class="menu-content">
                         <h4 class="serif-font fw-bold">Cah Kangkung</h4>
                         <p class="text-muted small">Api besar, terasi udang asli.</p>
@@ -244,7 +245,7 @@
             </div>
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="menu-card">
-                    <div class="menu-img-wrapper"><img src="https://images.unsplash.com/photo-1625758476270-34320958d5c3?q=80&w=1974&auto=format&fit=crop" class="menu-img"></div>
+                    <div class="menu-img-wrapper"><img src="img/es-kelapa.jpg" class="menu-img"></div>
                     <div class="menu-content">
                         <h4 class="serif-font fw-bold">Es Kelapa Batok</h4>
                         <p class="text-muted small">Murni langsung dari batoknya.</p>
@@ -254,7 +255,7 @@
             </div>
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="menu-card">
-                    <div class="menu-img-wrapper"><img src="https://images.unsplash.com/photo-1601039641847-7857b994d704?q=80&w=2070&auto=format&fit=crop" class="menu-img"></div>
+                    <div class="menu-img-wrapper"><img src="img/jus-alpukat.jpg" class="menu-img"></div>
                     <div class="menu-content">
                         <h4 class="serif-font fw-bold">Jus Alpukat</h4>
                         <p class="text-muted small">Kental dengan siraman coklat.</p>
