--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,7 @@
                         <i class="bi bi-geo-alt fs-2 text-danger"></i>
                     </div>
                     <h4 class="serif-font fw-bold">Lokasi</h4>
-                    <p class="text-muted small mb-4">Jl. Danau Indah No. 88, Jakarta Selatan</p>
+                    <p class="text-muted small mb-4">Jl. Danau Indah, Palembang Sumatera Selatan</p>
                     <a href="#" class="text-decoration-none fw-bold text-muted border-bottom border-dark pb-1">Lihat di Google Maps</a>
                 </div>
             </div>
