--- a/index.html
+++ b/index.html
@@ -367,9 +367,9 @@
         <div class="container">
             <a class="serif-font fs-2 text-decoration-none fw-bold fst-italic" href="#" style="color: var(--primary);">Sastra Fishing Club</a>
             <div class="mt-4 mb-4">
-                <a href="https://www.instagram.com/sastra_fishingclub?igsh=d2Z3emJvbmszdml1&utm_source=qr" class="text-muted mx-2 fs-5"><i class="bi bi-instagram"></i></a>
-                <a href="https://wa.me/6282246559115" class="text-muted mx-2 fs-5"><i class="bi bi-whatsapp"></i></a>
-                <a href="https://www.facebook.com/share/185wZatHwu/?mibextid=wwXIfr" class="text-muted mx-2 fs-5"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.instagram.com/sastra_fishingclub?igsh=d2Z3emJvbmszdml1&utm_source=qr"  target="_blank" class="text-muted mx-2 fs-5"><i class="bi bi-instagram"></i></a>
+                <a href="https://wa.me/6282246559115" target="_blank" class="text-muted mx-2 fs-5"><i class="bi bi-whatsapp"></i></a>
+                <a href="https://www.facebook.com/share/185wZatHwu/?mibextid=wwXIfr" target="_blank" class="text-muted mx-2 fs-5"><i class="bi bi-facebook"></i></a>
             </div>
             <p class="small opacity-50">© 2025 Sastra Fishing Club. All Rights Reserved.<br>Designed with Passion.</p>
         </div>
